--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,90 @@
 aiohttp==3.8.1
 aiosignal==1.2.0
+anyio==3.4.0
+appnope==0.1.2
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
 async-timeout==4.0.1
 attrs==21.2.0
+Babel==2.9.1
+backcall==0.2.0
 beautifulsoup4==4.10.0
+bleach==4.1.0
 bs4==0.0.1
 certifi==2021.10.8
+cffi==1.15.0
 charset-normalizer==2.0.8
 click==8.0.3
+debugpy==1.5.1
+decorator==5.1.0
+defusedxml==0.7.1
+entrypoints==0.3
 flake8==4.0.1
 Flask==2.0.2
 frozenlist==1.2.0
 future==0.18.2
 gunicorn==20.1.0
 idna==3.3
+ipykernel==6.6.0
+ipython==7.30.1
+ipython-genutils==0.2.0
 itsdangerous==2.0.1
+jedi==0.18.1
 Jinja2==3.0.3
+json5==0.9.6
+jsonschema==4.3.3
+jupyter-client==7.1.0
+jupyter-core==4.9.1
+jupyter-server==1.13.1
+jupyterlab==3.2.5
+jupyterlab-pygments==0.1.2
+jupyterlab-server==2.10.2
 line-bot-sdk==2.0.1
 lxml==4.6.4
 MarkupSafe==2.0.1
+matplotlib-inline==0.1.3
 mccabe==0.6.1
+mistune==0.8.4
 multidict==5.2.0
+nbclassic==0.3.4
+nbclient==0.5.9
+nbconvert==6.3.0
+nbformat==5.1.3
+nest-asyncio==1.5.4
+notebook==6.4.6
 numpy==1.21.4
+packaging==21.3
 pandas==1.3.4
+pandocfilters==1.5.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+prometheus-client==0.12.0
+prompt-toolkit==3.0.24
+ptyprocess==0.7.0
 pycodestyle==2.8.0
+pycparser==2.21
 pyflakes==2.4.0
+Pygments==2.11.1
+pyparsing==3.0.6
+pyrsistent==0.18.0
 python-dateutil==2.8.2
+python-dotenv==0.19.2
 pytz==2021.3
+pyzmq==22.3.0
 requests==2.26.0
+Send2Trash==1.8.0
 six==1.16.0
+sniffio==1.2.0
 soupsieve==2.3.1
+terminado==0.12.1
+testpath==0.5.0
+tornado==6.1
+traitlets==5.1.1
 typing_extensions==4.0.0
 urllib3==1.26.7
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.2.3
 Werkzeug==2.0.2
 yarl==1.7.2
